<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ASEDemo</groupId>
  <artifactId>CodeCoverage</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>CodeCoverage</name>
  <url>http://maven.apache.org</url>

    <properties>
    	<maven.compiler.source>6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>
        <!-- Used to locate the profile specific configuration file. -->
        <build.profile.id>dev</build.profile.id>
        <jacoco.it.execution.data.file>${project.build.directory}\coverage-reports\jacoco-it.exec</jacoco.it.execution.data.file>
        <jacoco.ut.execution.data.file>${project.build.directory}\coverage-reports\jacoco-ut.exec</jacoco.ut.execution.data.file>
        <jdk.version>11</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Only unit tests are run by default. -->
        <skip.integration.tests>true</skip.integration.tests>
        <skip.unit.tests>false</skip.unit.tests>
    </properties>
  

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
  <plugins>
  <plugin>
    <groupId>org.jacoco</groupId>
    <artifactId>jacoco-maven-plugin</artifactId>
    <version>0.8.0</version>
    <executions>
        <!--
            Prepares the property pointing to the JaCoCo runtime agent which
            is passed as VM argument when Maven the Surefire plugin is executed.
        -->
        <execution>
            <id>pre-unit-test</id>
            <goals>
                <goal>prepare-agent</goal>
            </goals>
            <configuration>
                <!-- Sets the path to the file which contains the execution data. -->
                <destFile>${project.build.directory}/target/jacoco-ut.exec</destFile>
                <!--
                    Sets the name of the property containing the settings
                    for JaCoCo runtime agent.
                -->
                <propertyName>surefireArgLine</propertyName>
            </configuration>
        </execution>
        <!--
            Ensures that the code coverage report for unit tests is created after
            unit tests have been run.
        -->
        <execution>
            <id>report</id>
            <phase>prepare-package</phase>
            <goals>
                <goal>report</goal>
            </goals>
            <!-- 
            <configuration>
                Sets the path to the file which contains the execution data.
                <dataFile>${project.build.directory}\coverage-reports\jacoco-ut.exec</dataFile>
                 Sets the output directory for the code coverage report. 
                <outputDirectory>${project.reporting.outputDirectory}\jacoco-ut</outputDirectory>
            </configuration> 
            -->
        </execution>
        <execution>
			<id>post-unit-test</id>
			<phase>test</phase>
			<goals>
				<goal>report</goal>
			</goals>
			<configuration>
				<!-- Sets the path to the file which contains the execution data. -->
				<dataFile>${project.build.directory}/target/jacoco.exec</dataFile>
				<!-- Sets the output directory for the code coverage report. -->
				<outputDirectory>${project.build.directory}/target/jacoco-ut</outputDirectory>
			</configuration>
		</execution>
    </executions>
		<configuration>
		<systemPropertyVariables>
		<jacoco-agent.destfile>${project.build.directory}/target/jacoco.exec</jacoco-agent.destfile>
		</systemPropertyVariables>
		</configuration>
  </plugin>
  
  <plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-surefire-plugin</artifactId>
  <version>2.20</version>
  <configuration>
  <testFailureIgnore>true</testFailureIgnore>
    <reuseForks>true</reuseForks>
    <threadCount>1</threadCount>
    <argLine>${surefireArgLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
  </configuration>
</plugin>
  </plugins>
  </build>
</project>
